# poly-paper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ARCHITECTURE.md  README.md  app.rs  gamma.rs  handler.rs  helper.rs  main.rs  orderbook.rs  picker.rs  render.rs  session.rs  types.rs  ws.rs
src/analyst/: README.md  app.rs  loader.rs  metrics.rs  mod.rs  models.rs  state.rs  watcher.rs
src/market/: README.md  app.rs  gamma.rs  mod.rs  orderbook.rs  picker.rs  prompt.rs  render.rs  session.rs  types.rs  ws.rs
