[package]
name = "poly-paper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures = "0.3"
polymarket_client_sdk_v2 = { version = "*", features = ["ws", "clob", "gamma"] }
ratatui = "0.29"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
