[package]
name = "poly-paper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures = "0.3"
indexmap = "2"
itertools = "0.13"
notify = "6"
parking_lot = "0.12"
polymarket_client_sdk_v2 = { version = "*", features = ["ws", "clob", "gamma"] }
ratatui = "0.29"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
